--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
@@ -7,6 +7,10 @@
     Html.AppendScriptParts(ResourceLocation.Head,
         "~/Scripts/jquery-2.1.1.js",
 		"~/Scripts/jquery-migrate-1.2.1.js",
+        "~/Scripts/underscore.js",
+        "~/Scripts/underscore.string.js",
+        "~/Scripts/underscore.mixins.js",
+        "~/Scripts/smartstore.doAjax.js",
         "~/Scripts/jquery.validate.js",
         "~/Scripts/jquery.validate.unobtrusive.js");
 		
