--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.Mobile.cshtml
@@ -5,6 +5,8 @@
 @{
     Layout = "~/Views/Shared/_Root.cshtml";
 
+    Html.AddScriptParts("~/Scripts/public.product-detail.mobile.js");
+    
     Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Name);
 }
 
@@ -58,7 +60,7 @@
 	}
 }
 
-<div class="page product-details-page">
+<div class="page product-details-page update-container">
     <div class="page-body">
         @Html.Widget("mobile_productdetails_top")
         @*we add enctype = "multipart/form-data" because "File upload" attribute control type requries it*@
@@ -82,24 +84,24 @@
                     @Html.Action("EmailAFriendButton", new { id = Model.Id })
                     @Html.Action("CompareProductsButton", "Catalog", new { productId = Model.Id })
                 </div>
-				@if (Model.ProductType == ProductType.BundledProduct)
-				{
-					<div id="ProductBundleItems" class="product-bundle">
-						@if (Model.RenderBundleTitle())
-						{
-							<div class="bundle-title">
-								<h3>@Model.BundleTitleText</h3>
-							</div>
-						}
-						<div class="bundle-items">										
-							@BundleProducts()
-						</div>
-						@if (Model.BundledItems.Where(x => x.BundleItem.Visible).Count() == 0)
-						{
-							<div class="no-bundled-products">@T("Products.NoBundledItems")</div>
-						}
-					</div>
-				}
+                @if (Model.ProductType == ProductType.BundledProduct)
+                {
+                    <div id="ProductBundleItems" class="product-bundle">
+                        @if (Model.RenderBundleTitle())
+                        {
+                            <div class="bundle-title">
+                                <h3>@Model.BundleTitleText</h3>
+                            </div>
+                        }
+                        <div class="bundle-items">
+                            @BundleProducts()
+                        </div>
+                        @if (Model.BundledItems.Where(x => x.BundleItem.Visible).Count() == 0)
+                        {
+                            <div class="no-bundled-products">@T("Products.NoBundledItems")</div>
+                        }
+                    </div>
+                }
                 <div class="full-description">
                     @Html.Raw(Html.CollapsedText(Model.FullDescription))
                 </div>
@@ -110,29 +112,29 @@
                         @Html.Partial("_DownloadSample", Model)
                         @Html.Action("ProductTierPrices", new { productId = Model.Id })
                         @if (Model.ProductType != ProductType.BundledProduct && Model.ProductVariantAttributes.ShouldBeRendered())
-						{
-							var dataDictAttributes = new ViewDataDictionary();
-							dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
-							@Html.Partial("_Attributes", Model.ProductVariantAttributes, dataDictAttributes)
-						}
+                        {
+                            var dataDictAttributes = new ViewDataDictionary();
+                            dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
+                            @Html.Partial("_Attributes", Model.ProductVariantAttributes, dataDictAttributes)
+                        }
                         <!--product SKU, manufacturer part number, stock info-->
                         @Html.Partial("_SKU_Man_Stock", Model)
                         <!--Back in stock subscription-->
                         @Html.Partial("_BackInStockSubscription", Model)
                         @{
-							var dataDictGiftCard = new ViewDataDictionary();
-							dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}_0", Model.Id);
-							@Html.Partial("_GiftCardInfo", Model.GiftCard, dataDictGiftCard)
+                        var dataDictGiftCard = new ViewDataDictionary();
+                        dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}_0", Model.Id);
+                        @Html.Partial("_GiftCardInfo", Model.GiftCard, dataDictGiftCard)
                         }
                         @{
-							var dataDictPrice = new ViewDataDictionary();
-							dataDictPrice.TemplateInfo.HtmlFieldPrefix = string.Format("price_{0}", Model.Id);
-							@Html.Partial("_Price", Model.ProductPrice, dataDictPrice)
+                        var dataDictPrice = new ViewDataDictionary();
+                        dataDictPrice.TemplateInfo.HtmlFieldPrefix = string.Format("price_{0}", Model.Id);
+                        @Html.Partial("_Price", Model.ProductPrice, dataDictPrice)
                         }
                         @{
-							var dataDictAddToCart = new ViewDataDictionary();
-							dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", Model.Id);
-							@Html.Partial("_AddToCart", Model.AddToCart, dataDictAddToCart)
+                        var dataDictAddToCart = new ViewDataDictionary();
+                        dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", Model.Id);
+                        @Html.Partial("_AddToCart", Model, dataDictAddToCart)
                         }
                     </div>
                 </div>
@@ -149,3 +151,9 @@
         @Html.Widget("mobile_productdetails_bottom")
     </div>
 </div>
+
+<script type="text/javascript">
+    $(function () {
+        $('#product-details-form').productDetailMobile({});
+    });
+</script>
