--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="options">
         <a href="@Url.Action("Create")" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a> <a href="@Url.Action("ExportXml")" class="btn">
-			<i class="fa fa-arrow-circle-o-down-alt"></i> @T("Admin.Common.ExportToXml")
+			<i class="fa fa-arrow-circle-o-down"></i> @T("Admin.Common.ExportToXml")
 		</a>
     </div>
 </div>
