--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -17,7 +17,7 @@
 			@T("Admin.Common.AddNew")
 		</a>
         <a href="@Url.Action("ExportXml")" class="btn">
-			<i class="fa fa-arrow-circle-o-down-alt"></i>
+			<i class="fa fa-arrow-circle-o-down"></i>
 			@T("Admin.Common.ExportToXml")
 		</a>
     </div>
