--- a/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="options">
         <a href="@Url.Action("ExportCsv")" class="btn">
-			<i class="fa fa-arrow-circle-o-down-alt"></i>&nbsp;@T("Admin.Common.ExportToCsv")
+			<i class="fa fa-arrow-circle-o-down"></i>&nbsp;@T("Admin.Common.ExportToCsv")
 		</a>
         <a href="#importcsv-window" data-toggle="modal" class="btn">
 			<i class="fa fa-arrow-circle-o-up"></i>&nbsp;@T("Admin.Common.ImportFromCsv")
