--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -90,7 +90,7 @@
 					else
 					{
 						<a class="btn btn-success plugin-install" data-toggle="button" href="#">
-							<i class="fa fa-arrow-circle-o-down-alt"></i>
+							<i class="fa fa-arrow-circle-o-down"></i>
 							@T("Admin.Configuration.Plugins.Fields.Install")
 						</a>
 					}
