--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -137,7 +137,7 @@
                 @if (Model.DisplayPdfInvoice)
                 {
                     <a href="@Url.Action("pdf", new { id = Model.Id })" class="btn pdf-order-button" rel="nofollow">
-						<i class="fa fa-arrow-circle-o-down-alt"></i>
+						<i class="fa fa-arrow-circle-o-down"></i>
                         @T("Order.GetPDFInvoice")
                     </a>
                 }
