--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -252,7 +252,7 @@
                         {
                         <div>
                             <a href="@Url.Action("Sample", "Download", new { id = Model.Id })">
-                                <i class="fa fa-fw fa-arrow-circle-o-down-alt"></i>
+                                <i class="fa fa-fw fa-arrow-circle-o-down"></i>
                                 @T("Products.DownloadSample")
                             </a>
                         </div>
