--- a/src/Presentation/SmartStore.Web/Views/Product/_ProductTemplate.Grouped.AssociatedProduct.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/_ProductTemplate.Grouped.AssociatedProduct.cshtml
@@ -165,7 +165,7 @@
 					<div>
 						<a href="@Url.Action("Sample", "Download", new { id = Model.Id })">
 							@T("Products.DownloadSample")
-							<i class="fa fa-arrow-circle-o-down-alt"></i>
+							<i class="fa fa-arrow-circle-o-down"></i>
 						</a>
 					</div>
 				}
