--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
@@ -39,7 +39,7 @@
                 @T("Common.Import")
             </a>
             <a href="#exportvariables-window" data-toggle="modal" class="btn">
-                <i class="fa fa-arrow-circle-o-down-alt"></i>
+                <i class="fa fa-arrow-circle-o-down"></i>
                 @T("Common.Export")
             </a>
             <a href='@Url.Action("Reset", new { theme = Model.ThemeName, storeId = Model.StoreId })' id="reset-vars" class="btn btn-danger">
