Image gallery: optimized UI & handling

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1707,8 +1707,10 @@ table.cart .cart-item-row .qty-input {
 }
 
 .product-details-page #details-cnt > div {
-	border-top: 1px solid #d5d5d5;
 	padding: 10px 0;
+}
+.product-details-page #details-cnt > .line {
+	border-top: 1px solid #d5d5d5;
 }
 .product-details-page #details-cnt .line.alpha {
 	border: none;
