Perf: drastically increased performance of DeleteGuestCustomers() method by using barebones DbContext

--- a/src/Presentation/SmartStore.Web/Administration/Views/Common/Maintenance.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Common/Maintenance.cshtml
@@ -13,159 +13,159 @@
 </div>
 @using (Html.BeginForm())
 {
-    <table>
-        <tr>
-            <td colspan="2">
-                <b>@T("Admin.System.Maintenance.DeleteImageCache")</b>
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DeleteImageCache.FileCount)
-            </td>
-            <td class="adminData">
-                @Model.DeleteImageCache.FileCount
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DeleteImageCache.TotalSize)
-            </td>
-            <td class="adminData">
-                @Model.DeleteImageCache.TotalSize
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <button type="submit" name="delete-image-cache" value="delete-image-cache" class="btn btn-primary">
-                    <i class="fa fa-times"></i>
-                    @T("Admin.Header.ClearCache")
-                </button>
-            </td>
-        </tr>
-    </table>
-    <hr />
-    <table width="100%">
-        <tr>
-            <td colspan="2">
-                <b>@T("Admin.System.Maintenance.DeleteGuests")</b>
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DeleteGuests.StartDate)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.DeleteGuests.StartDate)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DeleteGuests.EndDate)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.DeleteGuests.EndDate)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DeleteGuests.OnlyWithoutShoppingCart)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.DeleteGuests.OnlyWithoutShoppingCart)
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <button type="submit" name="delete-guests" value="delete-guests" class="btn btn-primary"><i class="fa fa-times"></i>&nbsp;@T("Admin.Common.Delete")</button>
-            </td>
-        </tr>
-        @if (Model.DeleteGuests.NumberOfDeletedCustomers.HasValue)
-        {
-            <tr>
-                <td colspan="2">
-                    <b>@string.Format(@T("Admin.System.Maintenance.DeleteGuests.TotalDeleted").Text, Model.DeleteGuests.NumberOfDeletedCustomers.Value)</b>
-                </td>
-            </tr>
-        }
-    </table>
-    <hr />
-    <table width="100%">
-        <tr>
-            <td colspan="2">
-                <b>@T("Admin.System.Maintenance.DeleteExportedFiles")</b>
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DeleteExportedFiles.StartDate)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.DeleteExportedFiles.StartDate)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DeleteExportedFiles.EndDate)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.DeleteExportedFiles.EndDate)
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <button type="submit" name="delete-exported-files" value="delete-exported-files"
-                    class="btn btn-danger"><i class="fa fa-times"></i>&nbsp;@T("Admin.Common.Delete")</button>
-            </td>
-        </tr>
-        @if (Model.DeleteExportedFiles.NumberOfDeletedFiles.HasValue)
-        {
-            <tr>
-                <td colspan="2">
-                    <b>@string.Format(@T("Admin.System.Maintenance.DeleteExportedFiles.TotalDeleted").Text, Model.DeleteExportedFiles.NumberOfDeletedFiles.Value)</b>
-                </td>
-            </tr>
-        }
-    </table>
-    
-    <hr />
-    
-    <table width="100%">
-        <tr>
-            <td colspan="2">
-                <b>@T("Admin.System.Maintenance.SqlQueryTitle")</b>
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                <div class="ctl-label">
-                    @Html.SmartLabelFor(model => model.SqlQuery)
-                </div>
-            </td>
-            <td class="adminData">
-                @Html.TextAreaFor(model => model.SqlQuery, new {style="width:500px; height:250px;" })
-            </td>
-        </tr>
-        
-        <tr>
-            <td class="adminData">
-                &nbsp;
-            </td>
-            <td>
-                <button type="submit" name="execute-sql-query" value="execute-sql-query" class="btn btn-danger">
-                    <i class="fa fa-bolt"></i>
-                    @T("Admin.System.Maintenance.SqlQueryExecute")
-                </button>
-            </td>
-        </tr>
-        @if (Model.DeleteExportedFiles.NumberOfDeletedFiles.HasValue)
-        {
-            <tr>
-                <td colspan="2">
-                    <b>@string.Format(@T("Admin.System.Maintenance.DeleteExportedFiles.TotalDeleted").Text, Model.DeleteExportedFiles.NumberOfDeletedFiles.Value)</b>
-                </td>
-            </tr>
-        }
-    </table>
-    
+	<table class="adminContent">
+		<tr>
+			<td colspan="2" class="admin-config-group">
+				<div class="title">@T("Admin.System.Maintenance.DeleteImageCache")</div>
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DeleteImageCache.FileCount)
+			</td>
+			<td class="adminData">
+				@Model.DeleteImageCache.FileCount
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DeleteImageCache.TotalSize)
+			</td>
+			<td class="adminData">
+				@Model.DeleteImageCache.TotalSize
+			</td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td class="adminData">
+				<button type="submit" name="delete-image-cache" value="delete-image-cache" class="btn btn-default">
+					<i class="fa fa-trash-o"></i>
+					@T("Admin.Header.ClearCache")
+				</button>
+			</td>
+		</tr>
+	</table>
+
+	<table class="adminContent">
+		<tr>
+			<td colspan="2" class="admin-config-group">
+				<div class="title">@T("Admin.System.Maintenance.DeleteGuests")</div>
+			</td>
+		</tr>
+		@if (Model.DeleteGuests.NumberOfDeletedCustomers.HasValue)
+		{
+			<tr>
+				<td colspan="2">
+					<div class="alert alert-info">
+						@string.Format(T("Admin.System.Maintenance.DeleteGuests.TotalDeleted").Text, Model.DeleteGuests.NumberOfDeletedCustomers.Value)
+					</div>
+				</td>
+			</tr>
+		}
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DeleteGuests.StartDate)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => model.DeleteGuests.StartDate)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DeleteGuests.EndDate)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.DeleteGuests.EndDate)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DeleteGuests.OnlyWithoutShoppingCart)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.DeleteGuests.OnlyWithoutShoppingCart)
+			</td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td class="adminData">
+				<button type="submit" name="delete-guests" value="delete-guests" class="btn btn-default">
+					<i class="fa fa-trash-o"></i>
+					@T("Admin.Common.Delete")
+				</button>
+			</td>
+		</tr>
+	</table>
+
+	<table class="adminContent">
+		<tr>
+			<td colspan="2" class="admin-config-group">
+				<div class="title">@T("Admin.System.Maintenance.DeleteExportedFiles")</div>
+			</td>
+		</tr>
+		@if (Model.DeleteExportedFiles.NumberOfDeletedFiles.HasValue)
+		{
+			<tr>
+				<td colspan="2">
+					<div class="alert alert-info">
+						@string.Format(T("Admin.System.Maintenance.DeleteExportedFiles.TotalDeleted").Text, Model.DeleteExportedFiles.NumberOfDeletedFiles.Value)
+					</div>
+				</td>
+			</tr>
+		}
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DeleteExportedFiles.StartDate)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => model.DeleteExportedFiles.StartDate)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DeleteExportedFiles.EndDate)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.DeleteExportedFiles.EndDate)
+			</td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td class="adminData">
+				<button type="submit" name="delete-exported-files" value="delete-exported-files" class="btn btn-danger">
+					<i class="fa fa-trash-o"></i>
+					@T("Admin.Common.Delete")
+				</button>
+			</td>
+		</tr>
+	</table>
+
+	<table class="adminContent">
+		<tr>
+			<td colspan="2" class="admin-config-group">
+				<div class="title">@T("Admin.System.Maintenance.SqlQueryTitle")</div>
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				<div class="ctl-label">
+					@Html.SmartLabelFor(model => model.SqlQuery)
+				</div>
+			</td>
+			<td class="adminData">
+				@Html.TextAreaFor(model => model.SqlQuery, new { style = "width:500px; height:250px;" })
+			</td>
+		</tr>
+
+		<tr>
+			<td>&nbsp;</td>
+			<td class="adminData">
+				<button type="submit" name="execute-sql-query" value="execute-sql-query" class="btn btn-danger">
+					<i class="fa fa-bolt"></i>
+					@T("Admin.System.Maintenance.SqlQueryExecute")
+				</button>
+			</td>
+		</tr>
+	</table>
+
 }
