--- a/src/Presentation/SmartStore.Web/Views/Shared/Header.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Header.cshtml
@@ -3,7 +3,7 @@
 
 <div id="logobar" class="container">
 
-    <a href="@Url.RouteUrl("HomePage")" class="brand">
+    <a href="@Url.RouteUrl("HomePage")" class="brand@(Model.LogoUploaded ? "" : " textual")">
             
         @if (Model.LogoUploaded) 
         {
