New theme variable to turn of the megamenu

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
@@ -96,7 +96,8 @@
         @ThemeVarEditor("ShopBarIconColor")
         @ThemeVarEditor("ShopBarLabel")
 
-        @ThemeVarEditor("InverseNavbar", "Navbar")
+        @ThemeVarEditor("DisplayNavbar", "Navbar")
+        @ThemeVarEditor("InverseNavbar")
         @ThemeVarEditor("NavbarHeight")
         @ThemeVarEditor("NavbarBackgroundHighlight")
         @ThemeVarEditor("NavbarText")
