Minor CSS fixes

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.less
@@ -84,7 +84,7 @@
 // Utility classes
 @import "~/Content/bootstrap/utilities.less"; // Has to be last to override when necessary
 
-// codehint: sm-add (start)
+/*// codehint: sm-add (start)
 // this is redundant, but doable in order
 // to avoid css class cluttering. 
 
@@ -109,7 +109,7 @@
 	background-color: transparent;
 	border: 0;
 }
-// codehint: sm-add (end)
+// codehint: sm-add (end)*/
 
 // Main
 @import "~/Content/theme.common.less";
