--- a/src/Presentation/SmartStore.Web/Content/bootstrap/mixins.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/mixins.less
@@ -9,7 +9,7 @@
 // Clearfix
 // --------
 // For clearing floats like a boss h5bp.com/q
-.clearfix() { // codehint: sm-edit (added parens, otherwise this class gets cluttered all over css)
+.clearfix {
   *zoom: 1;
   &:before,
   &:after {
@@ -103,7 +103,7 @@
 // CSS image replacement
 // -------------------------
 // Source: https://github.com/h5bp/html5-boilerplate/commit/aa0396eae757
-.hide-text() { // codehint: sm-edit (added parens, otherwise this class gets cluttered all over css)
+.hide-text {
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
@@ -510,7 +510,7 @@
   .colors() when (luma(@startColor) <= 80) {
 	// light text on dark background (btn-primary, -warning etc.)
 	color: #fff;
-	color: rgba(255,255,255, 0.92);
+	color: rgba(255,255,255, 1);
 	border-color: rgba(0, 0, 0, 0.1);
 	&:hover, &:active, &.active {
 	  color: #fff;
