--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderTotals.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderTotals.cshtml
@@ -167,7 +167,7 @@
                 <tr>
                     <td class="cart-total-left-below">
                         <span class="nobr">
-                            @string.Format(T("ShoppingCart.Totals.GiftCardInfo.Remaining").Text, gc.Remaining):
+                            @string.Format(T("ShoppingCart.Totals.GiftCardInfo.Remaining").Text, gc.Remaining)
                         </span>
                     </td>
                     <td></td>
